# systemd-manager

./: .gitignore  Cargo.toml  README.md  install.sh  org.freedesktop.policykit.systemd-manager.policy  systemd-manager-pkexec  systemd-manager.desktop  uninstall.sh
assets/: org.freedesktop.policykit.systemd-manager.policy  systemd-manager-pkexec
debian/DEBIAN/: control
src/: interface.glade  interface_3_10.glade  main.rs  systemctl.rs  systemctl_gui.rs  systemd_analyze.rs  systemd_dbus.rs  systemd_gui.rs
src/systemd/: analyze.rs  dbus.rs
