[package]
name = "systemd-manager"
version = "0.4.2"
license = "GPL-3.0"
repository = "https://github.com/mmstick/systemd-manager"
readme = "README.md"
authors = ["Michael Murphy <mmstickman@gmail.com>"]
documentation = "A GTK3 GUI for managing systemd services on Linux"
keywords = [ "gtk", "linux", "systemd" ]

[dependencies]
dbus = "0.3.3"
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_16"] }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
